[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/DelaGothicOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main/Game_over_scene.gd" type="Script" id=2]
[ext_resource path="res://Main/Credits.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/SoundFX/MyVoice/Ending-Paid.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/SoundFX/MyVoice/Ending-NotPaid.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="Game_over_scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -412.0
margin_top = -288.0
margin_right = 412.0
margin_bottom = 288.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paid" type="Label" parent="Panel/VBoxContainer"]
visible = false
margin_right = 824.0
margin_bottom = 262.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "You pitiful loser you actually PAID THAT SHITTY DEMON?? WHAT ARE YOU? AN IDIOT???? You're an idiot SANDWICH! 
NOM NOM NOM! Itadakimasu!"
align = 1
valign = 1
autowrap = true

[node name="Not_paid" type="Label" parent="Panel/VBoxContainer"]
margin_right = 824.0
margin_bottom = 508.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "You absolute psychopath you actually did NOT pay the damned demon back? what are you.... psycho... you're a psycho! leave! be gone! you scare me!"
align = 1
valign = 1
autowrap = true

[node name="Credits" type="Button" parent="Panel/VBoxContainer"]
margin_top = 512.0
margin_right = 824.0
margin_bottom = 542.0
custom_fonts/font = SubResource( 3 )
text = "Credits"

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
visible = false
margin_top = 512.0
margin_right = 824.0
margin_bottom = 542.0
custom_fonts/font = SubResource( 4 )
text = "Restart"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
margin_top = 546.0
margin_right = 824.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 3 )
text = "Close_game()"

[node name="Credits" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Ending_paid" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Ending_not_paid" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
[connection signal="pressed" from="Panel/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
